cambio avatar, color y README

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   <section id="home" class="content">
     <div class="half-section">
      <div class="avatar-container">
-      <img src="./assets/avatar.png" alt="">
+      <img src="./assets/rosa.png" alt="">
       <h3>"Yo, disfrutando de mi café..."</h3>
      </div>
     </div>
     <div class="half-section text-section">
       <div class="introduction">
-        <h1 class="title">Hola!, <br> Soy VALERIA QUIQUINTO </h1>
+        <h1 class="title">ValDelVal Jujuy</h1> <br> <h2>Especialidad en Turrón Salteño</h2>
         <ul class="socials">
           <li><a class="socials-icon" href=""><i class="bi bi-github"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
@@ -47,7 +47,7 @@
           <li><a class="socials-icon" href=""><i class="bi bi-instagram"></i></a></li>
         </ul>
   
-        <p class="description">+15 años de experiencia trabajando en aplicaciones de alta escala. <br> Déjame contarte un poco de mí, sigue deslizando!</p>
+        <p class="description"> ........<br> Déjame contarte un poco de nosotros, sigue deslizando!</p>
       </div>
 
     </div>
@@ -56,26 +56,23 @@
   <section id="about" class="content">
     <aside class="half-section text-section">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sint porro reiciendis debitis et harum animi rem fugit eaque. Officia maxime id ipsum culpa temporibus dolore saepe quos quasi debitis.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quisquam rem quam, corporis itaque dolor deserunt libero doloremque quibusdam repellat quidem doloribus quia eos officia placeat, quasi, odit repellendus ipsa.
+        .
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolore esse a officiis autem sint harum quos rerum neque aut, totam itaque iure perferendis vitae reiciendis praesentium corporis saepe consectetur.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati veniam, deleniti rem, neque ipsum eos ullam distinctio, atque harum perferendis itaque ipsam labore voluptatibus. Maiores provident perspiciatis sunt mollitia impedit.
+        .
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolore esse a officiis autem sint harum quos rerum neque aut, totam itaque iure perferendis vitae reiciendis praesentium corporis saepe consectetur.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati veniam, deleniti rem, neque ipsum eos ullam distinctio, atque harum perferendis itaque ipsam labore voluptatibus. Maiores provident perspiciatis sunt mollitia impedit.
+        .
       </p>
     </aside>
     <aside class="half-section title-section">
-      <h2>Un poco sobre mí</h2>
+      <h2>Un poco sobre nosotros</h2>
     </aside>
   </section>
 
   <section id="projects" class="content">
     <aside class="half-section title-section">
-      <h2>Experiencia en el campo</h2>
+      <h2>Experiencia en el mercado</h2>
     </aside>
     <aside class="half-section text-section">
         <ul class="project-list">
@@ -137,7 +134,7 @@
     </div>
       <div class="footer-section-container">
         <p>
-          &copy; 2022 - <a class="footer-link" href="https://www.linkedin.com">Nombre y Apellido</a>
+          &copy; 2022 - <a class="footer-link" href="https://www.linkedin.com">ValDelVal</a>
         </p>
       </div>
   </footer>
