modificación de logo y detalles, agregamos quienes somos

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
           <a href="#home">Inicio</a>
         </li>
         <li class="menu-item">
-          <a href="#about">Sobre mí</a>
+          <a href="#about">Productos</a>
         </li>
         <li class="menu-item">
-          <a href="#projects">Experiencia</a>
+          <a href="#projects">Carrito</a>
         </li>
         <li class="menu-item">
-          <a href="#contact">Contacto</a>
+          <a href="#projects">Quiénes somos</a>
+        </li>
+        <li class="menu-item">
+          <a href="#projects">Cómo comprar</a>
         </li>
       </ul>
     </nav>
@@ -32,37 +35,30 @@
   <section id="home" class="content">
     <div class="half-section">
      <div class="avatar-container">
-      <img src="./assets/rosa.png" alt="">
-      <h3>"Yo, disfrutando de mi café..."</h3>
+      <img src="./assets/logo.jpg" alt="">
+      <h3>"San Salvador de Jujuy-Jujuy"</h3>
      </div>
     </div>
     <div class="half-section text-section">
       <div class="introduction">
-        <h1 class="title">ValDelVal Jujuy</h1> <br> <h2>Especialidad en Turrón Salteño</h2>
+        <h1 class="title">ValDelVal </h1> <br> <h2>Especialidades en Tortas Turrón Salteño</h2>
         <ul class="socials">
           <li><a class="socials-icon" href=""><i class="bi bi-github"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-twitter"></i></a></li>
-          <li><a class="socials-icon" href=""><i class="bi bi-facebook"></i></a></li>
+          <li><a class="socials-icon" href="https://www.facebook.com/oricios.jujuy"><i class="bi bi-facebook"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-instagram"></i></a></li>
         </ul>
-  
         <p class="description"> ........<br> Déjame contarte un poco de nosotros, sigue deslizando!</p>
       </div>
-
     </div>
   </section>
   
   <section id="about" class="content">
     <aside class="half-section text-section">
       <p>
-        .
-      </p>
-      <p>
-        .
-      </p>
-      <p>
-        .
+        ValDelVal es un emprendimiento iniciado por integrantes de una familia jujeña, inspirado en una Pastelería Artesanal especializada en Tortas Turrón Salteño. Su objetivo es ofrecer un producto de alta calidad, excelente presentación y con el sabor de lo casero.
+El 23 de agosto de 2020 fue iniciado, en epocas de pandemia, lo cual nos surgió esta hermosa idea para ofrecer nuestros productos con servicio de delivery. No dejes de visitarnos, esperamos siempre sorprenderte. Valeria del Valle.
       </p>
     </aside>
     <aside class="half-section title-section">
@@ -72,36 +68,28 @@
 
   <section id="projects" class="content">
     <aside class="half-section title-section">
-      <h2>Experiencia en el mercado</h2>
+      <h2>Producto y Servicio</h2>
     </aside>
     <aside class="half-section text-section">
         <ul class="project-list">
           <li>
-            <h3>Proyecto 1</h3>
+            <h3>Historia y orígenes del Turrón</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, quidem, quisquam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto sapiente itaque eius voluptate! Nisi voluptas explicabo quaerat? Alias perspiciatis vel praesentium adipisci impedit? Commodi harum repellat eum beatae dolorum.
+              Es un producto elaborado a base de miel, nueces y azúcares cuyo origen se remonta a siglos y siglos atrás. Se presume que ya en la época griega se preparaba una pasta compuesta por frutos secos (almendra principalmente) y mieles, la cual servía a los deportistas griegos como producto energético para participar en las Olimpiadas.
             </p>
-            <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
+            <a class="project-link" href="https://www.turronesydulces.com/historiaturron.htm"><i class="bi bi-github"></i> Ver más</a>
           </li>
           <li>
-            <h3>Proyecto 2</h3>
+            <h3>Nuestro Producto</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, quidem, quisquam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto sapiente itaque eius voluptate! Nisi voluptas explicabo quaerat? Alias perspiciatis vel praesentium adipisci impedit? Commodi harum repellat eum beatae dolorum.
+              EL Turrón Salteño de ValdelVal está elaborado a base de masas crocantes con dulce de leche como relleno, la decoración es una crema suave cuyo ingrediente que resalta es la miel de caña, y terminamos la decoración con nueces.
             </p>
-            <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
           <li>
-            <h3>Proyecto 3</h3>
+            <h3>Servicios</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, quidem, quisquam.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit architecto sapiente itaque eius voluptate! Nisi voluptas explicabo quaerat? Alias perspiciatis vel praesentium adipisci impedit? Commodi harum repellat eum beatae dolorum.
+              Contamos con servicio de delivery, en horarios comercial.
             </p>
-            <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
           </li>
         </ul>
     </aside>
@@ -118,7 +106,7 @@
         <input class="btn-send-message" type="submit" value="Enviar">
     </aside>
     <aside class="half-section title-section">
-      <h2>Envíame un mensaje y charlemos!</h2>
+      <h2>Consultas o reservas!</h2>
     </aside>
   </section>
 
@@ -128,13 +116,13 @@
         <li><a class="socials-icon" href=""> <i class="bi bi-github"></i></a></li>
         <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
         <li><a class="socials-icon" href=""><i class="bi bi-twitter"></i></a></li>
-        <li><a class="socials-icon" href=""><i class="bi bi-facebook"></i></a></li>
+        <li><a class="socials-icon" href="https://www.facebook.com/oricios.jujuy"><i class="bi bi-facebook"></i></a></li>
         <li><a class="socials-icon" href=""><i class="bi bi-instagram"></i></a></li>
       </ul>
     </div>
       <div class="footer-section-container">
         <p>
-          &copy; 2022 - <a class="footer-link" href="https://www.linkedin.com">ValDelVal</a>
+          &copy; 2022 - <a class="footer-link" href="https://www.linkedin.com">ValDelVal - San Salvador de Jujuy - Jujuy</a>
         </p>
       </div>
   </footer>
