actualizacion datos personales

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="half-section text-section">
       <div class="introduction">
-        <h1 class="title">ValDelVal </h1> <br> <h2>Especialidades en Tortas Turrón Salteño</h2>
+        <h1 class="title">ValDelVal </h1> <br> <h2>Especialidades en Tortas Turrón Salteño - Valeria Quiquinto</h2>
         <ul class="socials">
           <li><a class="socials-icon" href=""><i class="bi bi-github"></i></a></li>
           <li><a class="socials-icon" href=""><i class="bi bi-linkedin"></i></a></li>
