--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <a href="#projects">Carrito</a>
         </li>
         <li class="menu-item">
+          <a href="#technologies">Tecnologías</a>
+        </li>
+        <li class="menu-item">
           <a href="#projects">Quiénes somos</a>
         </li>
         <li class="menu-item">
@@ -94,20 +97,69 @@ El 23 de agosto de 2020 fue iniciado, en epocas de pandemia, lo cual nos surgió
         </ul>
     </aside>
   </section>
+  <section id="technologies" class="content">
+    <aside class="half-section text-section">
+       <div class="tech-icons-container">
+          <ul class="tech-icon-list">
+            <li class="tech-icon-item">
+              <img height="60px" width="auto" src="./assets/tech-icons/icon-git.svg" alt="Git Icon">
+              <span>Git</span>
+            </li>
+            <li class="tech-icon-item">
+              <img height="60px" width="auto" src="./assets/tech-icons/icon-github.svg" alt="Git Icon">
+              <span>GitHub</span>
+            </li>
+            <li class="tech-icon-item-end">
+              <img height="60px" width="auto" src="./assets/tech-icons/icon-html.svg" alt="Git Icon">
+              <span>HTML</span>
+            </li>
+          </ul>
+          <ul class="tech-icon-list">
+            <li class="tech-icon-item">
+              <img height="60px" width="auto" src="./assets/tech-icons/icon-css.svg" alt="Git Icon">
+              <span>CSS</span>
+            </li>
+            <li class="tech-icon-item">
+              <img height="60px" width="auto" src="./assets/tech-icons/icon-js.svg" alt="Git Icon">
+              <span>JavaScript</span>
+            </li>
+            <li class="tech-icon-item-end">
+              <img height="60px" width="auto" src="./assets/tech-icons/icon-react.svg" alt="Git Icon">
+              <span>React</span>
+            </li>
+          </ul>
+          <ul class="tech-icon-list-end">
+            <li class="tech-icon-item">
+              <img height="60px" width="auto" src="./assets/tech-icons/icon-nodejs.svg" alt="Git Icon">
+              <span>NodeJS</span>
+            </li>
+            <li class="tech-icon-item">
+              <img height="60px" width="auto" src="./assets/tech-icons/icon-postgresql.svg" alt="Git Icon">
+              <span>PostgreSQL</span>
+            </li>
+          </ul>
+       </div>
+    </aside>
+    <aside class="half-section title-section">
+      <h2>Tecnologías que manejo</h2>
+    </aside>
+  </section>
   <section id="contact" class="content">
+    <aside class="half-section title-section">
+      <h2>Consultas o reservas!</h2>
+  </aside>
     <aside class="half-section text-section">
       <form action="">
         <label for="name">Nombre</label>
         <input class="input-field" type="text" name="name" id="name">
         <label for="email">Email</label>
-        <input class="input-field type="email" name="email" id="email">
+        <input class="input-field" type="email" name="email" id="email">
         <label for="message">Mensaje</label>
         <textarea class="input-field" name="message" id="message" cols="30" rows="10"></textarea>
         <input class="btn-send-message" type="submit" value="Enviar">
-    </aside>
-    <aside class="half-section title-section">
-      <h2>Consultas o reservas!</h2>
-    </aside>
+      </form>
+      </aside>
+      
   </section>
 
   <footer>
